--- a/test_upload.ipynb
+++ b/test_upload.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "test_upload.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOVfuyNtvea+OOK1YesCgcr",
+      "authorship_tag": "ABX9TyPOc9XrGffxHPv6Ua1EudFI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,8 +60,35 @@
       "metadata": {
         "id": "mbiVV8Y8hYFw"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "list_com = [ x + 9 for x in range(1,25)]\n",
+        "\n",
+        "print(list_com)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "hUetp27bkWYi",
+        "outputId": "d5c15f60-54c3-4953-e4a2-736ee20d5e09",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33]\n"
+          ]
+        }
+      ]
     }
   ]
 }
