--- a/test_upload.ipynb
+++ b/test_upload.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "test_upload.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPOc9XrGffxHPv6Ua1EudFI",
+      "authorship_tag": "ABX9TyO2FctSbcIwci3DNu8XlTwf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -73,11 +73,11 @@
         "\n"
       ],
       "metadata": {
-        "id": "hUetp27bkWYi",
-        "outputId": "d5c15f60-54c3-4953-e4a2-736ee20d5e09",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "hUetp27bkWYi",
+        "outputId": "d5c15f60-54c3-4953-e4a2-736ee20d5e09"
       },
       "execution_count": 2,
       "outputs": [
@@ -86,6 +86,34 @@
           "name": "stdout",
           "text": [
             "[10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "#dict comprehension\n",
+        "\n",
+        "dict_com = {key:val for (key,val) in enumerate(list_com,1)}\n",
+        "\n",
+        "print(dict_com)"
+      ],
+      "metadata": {
+        "id": "Mu8CyWgDk582",
+        "outputId": "4d2271ce-3080-4240-a0b1-45ca304da591",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{1: 10, 2: 11, 3: 12, 4: 13, 5: 14, 6: 15, 7: 16, 8: 17, 9: 18, 10: 19, 11: 20, 12: 21, 13: 22, 14: 23, 15: 24, 16: 25, 17: 26, 18: 27, 19: 28, 20: 29, 21: 30, 22: 31, 23: 32, 24: 33}\n"
           ]
         }
       ]
